--- a/splittable_random.opam
+++ b/splittable_random.opam
@@ -10,7 +10,10 @@ build: [
 ]
 depends: [
   "base"
-  "ppx_jane"
+  "ppx_assert"
+  "ppx_bench"
+  "ppx_inline_test"
+  "ppx_sexp_message"
   "jbuilder"                {build & >= "1.0+beta18.1"}
   "ocaml-migrate-parsetree" {>= "1.0"}
   "ppxlib"                  {>= "0.1.0"}
