--- a/splittable_random.opam
+++ b/splittable_random.opam
@@ -1,27 +1,25 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/splittable_random"
 bug-reports: "https://github.com/janestreet/splittable_random/issues"
 dev-repo: "git+https://github.com/janestreet/splittable_random.git"
+doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/splittable_random/index.html"
 license: "MIT"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml" {>= "4.04.2"}
   "base"
   "ppx_assert"
   "ppx_bench"
   "ppx_inline_test"
   "ppx_sexp_message"
-  "jbuilder"                {build & >= "1.0+beta18.1"}
-  "ocaml-migrate-parsetree" {>= "1.0"}
-  "ppxlib"                  {>= "0.1.0"}
+  "dune"             {build & >= "1.5.1"}
 ]
-available: [ ocaml-version >= "4.04.2" ]
-descr: "
-PRNG that can be split into independent streams
-
+synopsis: "PRNG that can be split into independent streams"
+description: "
 PRNG that can be split into independent streams
 
 A splittable pseudo-random number generator (SPRNG) functions like a PRNG in that it can
