--- a/splittable_random.opam
+++ b/splittable_random.opam
@@ -16,7 +16,7 @@ depends: [
   "ppx_bench"
   "ppx_inline_test"
   "ppx_sexp_message"
-  "dune"             {build & >= "1.5.1"}
+  "dune"             {>= "1.5.1"}
 ]
 synopsis: "PRNG that can be split into independent streams"
 description: "
