--- a/splittable_random.opam
+++ b/splittable_random.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.13.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/splittable_random"
@@ -10,12 +11,12 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.04.2"}
-  "base"
-  "ppx_assert"
-  "ppx_bench"
-  "ppx_inline_test"
-  "ppx_sexp_message"
+  "ocaml"            {>= "4.04.2"}
+  "base"             {>= "v0.13" & < "v0.14"}
+  "ppx_assert"       {>= "v0.13" & < "v0.14"}
+  "ppx_bench"        {>= "v0.13" & < "v0.14"}
+  "ppx_inline_test"  {>= "v0.13" & < "v0.14"}
+  "ppx_sexp_message" {>= "v0.13" & < "v0.14"}
   "dune"             {>= "1.5.1"}
 ]
 synopsis: "PRNG that can be split into independent streams"
