--- a/splittable_random.opam
+++ b/splittable_random.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.16.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/splittable_random"
@@ -10,12 +11,12 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.14.0"}
-  "base"
-  "ppx_assert"
-  "ppx_bench"
-  "ppx_inline_test"
-  "ppx_sexp_message"
+  "ocaml"            {>= "4.14.0"}
+  "base"             {>= "v0.16" & < "v0.17"}
+  "ppx_assert"       {>= "v0.16" & < "v0.17"}
+  "ppx_bench"        {>= "v0.16" & < "v0.17"}
+  "ppx_inline_test"  {>= "v0.16" & < "v0.17"}
+  "ppx_sexp_message" {>= "v0.16" & < "v0.17"}
   "dune"             {>= "2.0.0"}
 ]
 available: arch != "arm32" & arch != "x86_32"
