--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,5 @@
 (library
  (name splittable_random_test)
- (libraries base expect_test_helpers_core splittable_random)
+ (libraries base core expect_test_helpers_core splittable_random)
  (preprocess
   (pps ppx_jane)))
